tests/transpiler/x/scala/fun_three_args.error
exit status 1
/workspace/mochi/tests/transpiler/x/scala/fun_three_args.scala:3: error: ':' expected but ',' found.
  def sum3(a, b, c) = {
            ^
/workspace/mochi/tests/transpiler/x/scala/fun_three_args.scala:8: error: identifier expected but '}' found.
}
^
two errors found
