tests/transpiler/x/scala/fun_three_args.scala
// Generated by Mochi v0.10.31 on 2025-07-20 02:16:56 GMT+7
object Main extends App {
  def sum3(a, b, c) = {
    ((a + b) + c)
  }

  println(sum3(1, 2, 3))
}
